--- a/src/app/dim-ui/TileGrid.m.scss
+++ b/src/app/dim-ui/TileGrid.m.scss
@@ -4,8 +4,12 @@
   font-weight: 600;
   font-size: 14px;
   text-transform: uppercase;
-  margin-top: 16px;
-  margin-bottom: 8px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  background-color: var(--theme-item-sheet-bg);
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 
 .items {
@@ -29,9 +33,6 @@
   &:focus-visible {
     border-color: var(--theme-accent-secondary);
     outline: none;
-  }
-  > *:first-child {
-    float: left;
   }
 }
 
