--- a/src/app/loadout/plug-drawer/PlugStackableIcon.m.scss
+++ b/src/app/loadout/plug-drawer/PlugStackableIcon.m.scss
@@ -1,3 +1,20 @@
 .stackable {
+  composes: flexRow from '../../dim-ui/common.m.scss';
+  align-items: center;
+  gap: 0.5ch;
   font-size: 11px;
+}
+
+.stack {
+  display: grid;
+  grid-template: min-content / min-content;
+  place-content: center;
+  > * {
+    grid-column: 1;
+    grid-row: 1;
+    text-align: center;
+  }
+  > :last-child {
+    opacity: 0.5;
+  }
 }
