Allow shift-clicking on stat bars to set maximums

--- a/src/app/loadout-builder/filter/StatConstraintEditor.m.scss
+++ b/src/app/loadout-builder/filter/StatConstraintEditor.m.scss
@@ -99,9 +99,13 @@
 }
 
 // Tiers that can't be reached given the currently selected minimums
-.maxed:not(.locked):not(.selectedStatBar) {
+.maxed:not(.selectedStatBar) {
   color: #666;
   background-color: rgba(255, 255, 255, 0.1);
+}
+.maxRestricted:not(.selectedStatBar) {
+  color: #666;
+  background-color: transparent;
 }
 
 .selectedStatBar {
