support stream deck plugin 3.x

--- a/src/app/stream-deck/StreamDeckSettings/StreamDeckSettings.m.scss
+++ b/src/app/stream-deck/StreamDeckSettings/StreamDeckSettings.m.scss
@@ -13,6 +13,12 @@
   margin-top: 8px;
 }
 
-.resetButton {
+.authentication {
   margin-top: 8px;
+}
+
+.authentication button {
+  display: flex;
+  gap: 8px;
+  align-items: center;
 }
