--- a/src/app/dim-ui/TileGrid.m.scss
+++ b/src/app/dim-ui/TileGrid.m.scss
@@ -19,12 +19,16 @@
 }
 
 .tile {
-  composes: flexRow from '../dim-ui/common.m.scss';
+  display: grid;
+  grid-template-columns: min-content auto min-content;
+  grid-template-rows: max-content auto;
+  grid-template-areas:
+    'icon title corner'
+    'details details details';
   border: 1px solid transparent;
   cursor: pointer;
   padding: 8px;
   gap: 8px;
-  height: 100%;
   box-sizing: border-box;
   position: relative;
   &:hover {
@@ -37,11 +41,10 @@
 }
 
 .details {
-  flex: 1;
   display: flex;
   flex-direction: column;
   gap: 4px;
-  width: 0;
+  grid-column-end: span 3;
 }
 
 .selected {
@@ -54,7 +57,12 @@
 }
 
 .title {
+  align-self: center;
   color: var(--theme-text);
   font-weight: bold;
   font-size: 14px;
+  grid-column-end: span 2;
+  &.withCorner {
+    grid-column-end: span 1;
+  }
 }
