--- a/src/app/loadout/plug-drawer/SelectablePlug.m.scss
+++ b/src/app/loadout/plug-drawer/SelectablePlug.m.scss
@@ -24,10 +24,11 @@
 
 .volumeRocker {
   composes: flexColumn from '../../dim-ui/common.m.scss';
+  height: 100%;
   gap: 4px;
-  :global(.dim-button) {
+  > :global(.dim-button) {
     padding-bottom: 0;
     padding-top: 0;
-    height: calc(calc(var(--item-size) / 2) - 2px);
+    flex: 1;
   }
 }
