Open subclass details on click

--- a/src/app/loadout/loadout-edit/LoadoutEditSubclass.m.scss
+++ b/src/app/loadout/loadout-edit/LoadoutEditSubclass.m.scss
@@ -9,6 +9,7 @@
       var(--item-icon-size) + (var(--loadout-edit-subclass-columns, 3) - 1) * 4px
   );
   gap: var(--item-margin);
+  cursor: pointer;
 }
 
 .subclass {
