--- a/src/app/settings/SettingsPage.m.scss
+++ b/src/app/settings/SettingsPage.m.scss
@@ -14,6 +14,10 @@
   h1 {
     margin: 0 0 16px 0;
     font-size: 20px;
+
+    @include phone-portrait {
+      margin: 16px 0;
+    }
   }
 
   h2 {
@@ -27,7 +31,7 @@
   section {
     display: flex;
     flex-direction: column;
-    gap: 4px;
+    gap: 8px;
   }
 
   label {
@@ -50,9 +54,16 @@
 
 .setting {
   composes: flexColumn from '../dim-ui/common.m.scss';
-  gap: 4px;
+  gap: 8px;
   padding: 8px;
   background-color: var(--theme-search-bg);
+
+  @include phone-portrait {
+    margin-left: -10px;
+    margin-right: -10px;
+    padding: 10px;
+  }
+
   > .setting {
     padding: 0;
     margin: 0;
