Restore bottom margin to analyzer indicator

--- a/src/app/loadout/loadout-ui/menu-hooks.m.scss
+++ b/src/app/loadout/loadout-ui/menu-hooks.m.scss
@@ -4,7 +4,8 @@
   margin-bottom: 8px;
 
   @include phone-portrait {
-    margin: 0 10px;
+    margin-left: 10px;
+    margin-right: 10px;
   }
 
   :global(.app-icon) {
