--- a/src/app/progress/ReputationRank.m.scss
+++ b/src/app/progress/ReputationRank.m.scss
@@ -19,7 +19,6 @@
 .crucibleRankIcon {
   margin: 2px 10px -2px 2px;
   position: relative;
-  display: inline-block;
   width: 64px;
   height: 64px;
 }
@@ -35,7 +34,7 @@
       flex-direction: column;
     }
     .crucibleRankIcon {
-      margin: 0;
+      margin: 0 0 4px 0;
     }
   }
 }
