add filter pills and indicators for fashion/mods only loadouts

--- a/src/app/loadout/loadout-menu/LoadoutPopup.m.scss
+++ b/src/app/loadout/loadout-menu/LoadoutPopup.m.scss
@@ -60,6 +60,16 @@
         }
       }
     }
+
+    .fashionIcon {
+      height: 20px !important;
+      width: 20px !important;
+      margin-right: 5px;
+    }
+    .modificationIcon {
+      height: 18px !important;
+      width: 18px !important;
+    }
   }
 
   &:hover,
@@ -69,8 +79,12 @@
     > span:first-child > :global(.app-icon) {
       color: var(--theme-text-invert) !important;
     }
-    > span:first-child > img:first-child {
+    > span:first-child > img:first-child,
+    .modificationIcon {
       filter: none;
+    }
+    .fashionIcon {
+      filter: invert(1);
     }
 
     .note {
