--- a/src/app/loadout/loadout-ui/menu-hooks.m.scss
+++ b/src/app/loadout/loadout-ui/menu-hooks.m.scss
@@ -12,3 +12,16 @@
     margin: 0 4px 0 4px;
   }
 }
+
+.fashionIcon {
+  background-position: center;
+  background-size: 150%;
+  border-radius: 50%;
+  height: 15px;
+  width: 15px;
+}
+.modificationIcon {
+  height: 13px;
+  width: 13px;
+  filter: invert(0.8);
+}
