--- a/src/app/loadout-builder/generated-sets/ExistingLoadoutsForItem.m.scss
+++ b/src/app/loadout-builder/generated-sets/ExistingLoadoutsForItem.m.scss
@@ -1,27 +1,6 @@
-.inGameLoadoutList {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-  display: flex;
-  justify-content: start;
-  gap: 3px;
-  margin-right: 3px;
-
-  li {
-    margin: 0;
-  }
-}
+@use 'app/item-triage/ItemTriage.m.scss' as ItemTriage;
 
 .loadoutsBar {
   display: flex;
-  justify-content: start;
-  width: 100%;
-  line-height: 10px;
-  padding-bottom: 4px;
-  height: 10px;
-}
-
-.loadoutCount {
-  text-align: right;
-  flex-grow: 1;
+  align-items: center;
 }
