--- a/src/app/search/search-filter.scss
+++ b/src/app/search/search-filter.scss
@@ -33,7 +33,7 @@
     flex: 1;
     width: 0;
     padding: 7px 0;
-    font-size: 13px;
+    font-size: inherit;
     font-family: inherit;
     color: inherit;
     caret-color: var(--theme-accent-primary);
