--- a/src/app/item-popup/ItemDetails.m.scss
+++ b/src/app/item-popup/ItemDetails.m.scss
@@ -39,11 +39,10 @@
 
   .mods & {
     width: calc(var(--item-size) / 3) !important;
-    height: calc(var(--item-size) / 3) !important;
     font-size: calc(var(--item-size) / 5) !important;
     vertical-align: middle;
     padding: 0;
-    margin-right: 2px;
+    margin-right: 0;
     border-radius: 0%;
     filter: invert(1);
     background: none !important;
