--- a/src/app/item-popup/ItemDetails.m.scss
+++ b/src/app/item-popup/ItemDetails.m.scss
@@ -42,7 +42,7 @@
     font-size: calc(var(--item-size) / 5) !important;
     vertical-align: middle;
     padding: 0;
-    border-radius: 0%;
+    border-radius: 0;
     filter: invert(1);
     background: none !important;
   }
