fix: safe area is respected for pages

--- a/src/app/App.m.scss
+++ b/src/app/App.m.scss
@@ -1,6 +1,10 @@
 @use 'variables.scss' as *;
 
 .app {
+  user-select: none;
+  padding-left: env(safe-area-inset-left);
+  padding-right: env(safe-area-inset-right);
+
   &::before {
     @include below-header;
     background: var(--theme-app-bg);
