--- a/src/app/inventory/ItemIcon.m.scss
+++ b/src/app/inventory/ItemIcon.m.scss
@@ -75,23 +75,86 @@ $commonBg: #366f42;
 $rgb-masterworked: dim-hex-to-rgb-values($stat-masterworked);
 .legendaryMasterwork {
   box-shadow: inset 0 0 1px 0 rgba(0, 0, 0, 0.25);
-  background:
+  background-image: radial-gradient(
+      ellipse at bottom,
+      dim-rgb-values-to-rgba($rgb-masterworked, $alpha: 0.2),
+      transparent 75%
+    ),
     radial-gradient(
-        ellipse at center bottom,
-        dim-rgb-values-to-rgba($rgb-masterworked, $alpha: 0.2),
-        transparent 75%
-      )
-      center bottom,
-    radial-gradient(
-        ellipse at center bottom,
-        dim-rgb-values-to-rgba($rgb-masterworked, $alpha: 0.1),
-        transparent 75%
-      )
-      center bottom;
+      ellipse at bottom,
+      dim-rgb-values-to-rgba($rgb-masterworked, $alpha: 0.1),
+      transparent 75%
+    );
   background-size:
     125% 30%,
     50% 50%;
-  background-repeat: no-repeat, no-repeat;
+  background-repeat: no-repeat;
+  background-position: bottom;
+}
+
+.shinyMasterwork {
+  $shiny-stripe: dim-hex-to-rgb-values(#f3d299);
+  $initial-offset: 0.71;
+  $stripe-width: 0.025;
+  $stripe-spacing: 0.055;
+  $shiny-stripe-alpha: dim-rgb-values-to-rgba($shiny-stripe, $alpha: 0.5);
+  $fuzz: 0.005; // determines blurriness level of stripe edges
+
+  $stripe-1-start: $initial-offset + $stripe-width * 0 + $stripe-spacing * 0;
+  $stripe-1-ended: $initial-offset + $stripe-width * 1 + $stripe-spacing * 0;
+
+  $stripe-2-start: $initial-offset + $stripe-width * 1 + $stripe-spacing * 1;
+  $stripe-2-ended: $initial-offset + $stripe-width * 2 + $stripe-spacing * 1;
+
+  $stripe-3-start: $initial-offset + $stripe-width * 2 + $stripe-spacing * 2;
+  $stripe-3-ended: $initial-offset + $stripe-width * 3 + $stripe-spacing * 2;
+
+  $stripe-4-start: $initial-offset + $stripe-width * 3 + $stripe-spacing * 3;
+  $stripe-4-ended: $initial-offset + $stripe-width * 4 + $stripe-spacing * 3;
+
+  box-shadow: inset 0 0 1px 0 rgba(0, 0, 0, 0.25);
+  background-image: radial-gradient(
+      ellipse at bottom,
+      dim-rgb-values-to-rgba($rgb-masterworked, $alpha: 0.2),
+      transparent 75%
+    ),
+    radial-gradient(
+      ellipse at bottom,
+      dim-rgb-values-to-rgba($rgb-masterworked, $alpha: 0.1),
+      transparent 75%
+    ),
+    linear-gradient(
+      135deg,
+      transparent #{math.percentage($stripe-1-start)},
+      #{$shiny-stripe-alpha} #{math.percentage($stripe-1-start + $fuzz)},
+
+      #{$shiny-stripe-alpha} #{math.percentage($stripe-1-ended)},
+      transparent #{math.percentage($stripe-1-ended + $fuzz)},
+
+      transparent #{math.percentage($stripe-2-start)},
+      #{$shiny-stripe-alpha} #{math.percentage($stripe-2-start + $fuzz)},
+
+      #{$shiny-stripe-alpha} #{math.percentage($stripe-2-ended)},
+      transparent #{math.percentage($stripe-2-ended + $fuzz)},
+
+      transparent #{math.percentage($stripe-3-start)},
+      #{$shiny-stripe-alpha} #{math.percentage($stripe-3-start + $fuzz)},
+
+      #{$shiny-stripe-alpha} #{math.percentage($stripe-3-ended)},
+      transparent #{math.percentage($stripe-3-ended + $fuzz)},
+
+      transparent #{math.percentage($stripe-4-start)},
+      #{$shiny-stripe-alpha} #{math.percentage($stripe-4-start + $fuzz)},
+
+      #{$shiny-stripe-alpha} #{math.percentage($stripe-4-ended)},
+      transparent #{math.percentage($stripe-4-ended + $fuzz)}
+    );
+  background-size:
+    125% 30%,
+    50% 50%,
+    100% 100%;
+  background-repeat: no-repeat;
+  background-position: bottom;
 }
 
 // Exotic Masterwork pattern emulating .src/images/exotic-masterwork.png
