--- a/src/app/inventory/ItemIcon.m.scss
+++ b/src/app/inventory/ItemIcon.m.scss
@@ -93,13 +93,13 @@ $rgb-masterworked: dim-hex-to-rgb-values($stat-masterworked);
 }
 
 .shinyMasterwork {
-  $shiny-stripe-color: #f3d29970;
+  $shiny-stripe-color: #d0b343;
 
   // look-defining percentages
-  $initial-offset: 71; // left edge of the leftmost stripe
-  $final-offset: 97; // right edge of the rightmost stripe
-  $stripe-width: 2.5; // obvious
-  $fuzz: 0.9; // determines blurriness level of stripe edges
+  $initial-offset: 69; // left edge of the leftmost stripe
+  $final-offset: 98.5; // right edge of the rightmost stripe
+  $stripe-width: 2.6; // obvious
+  $fuzz: 1.2; // determines blurriness level of stripe edges
 
   // math
   $effective-fuzz: math.div($fuzz, 100);
@@ -118,7 +118,9 @@ $rgb-masterworked: dim-hex-to-rgb-values($stat-masterworked);
   $stripe-4-start: math.div(($initial-offset + ($stripe-width * 3) + ($stripe-spacing * 3)), 100);
   $stripe-4-ended: math.div(($initial-offset + ($stripe-width * 4) + ($stripe-spacing * 3)), 100);
 
-  box-shadow: inset 0 0 1px 0 rgba(0, 0, 0, 0.25);
+  opacity: 0.4;
+  left: 1.5px;
+  filter: drop-shadow(0 0 2px #e8a534);
   background-image: radial-gradient(
       ellipse at bottom,
       dim-rgb-values-to-rgba($rgb-masterworked, $alpha: 0.2),
