--- a/src/app/character-tile/CharacterTile.m.scss
+++ b/src/app/character-tile/CharacterTile.m.scss
@@ -43,7 +43,7 @@
 .vaultTile {
   composes: tileCommon;
   display: grid;
-  grid-template-areas: 'emblem class vaultCapacity' !important;
+  grid-template-areas: 'emblem class power' !important;
   grid-template-columns: 46px 1fr min-content;
   grid-template-rows: 1fr;
   align-items: center;
@@ -51,6 +51,9 @@
   gap: 0 6px;
   padding: 0 6px;
 
+  @include phone-portrait {
+    grid-template-areas: 'emblem class vaultCapacity' !important;
+  }
   // The vault needs a little border to stand out against some backgrounds
   border: 1px solid rgba(0, 0, 0, 0.3);
   border-right: none;
@@ -131,8 +134,6 @@
 
 // Current power level
 .powerLevel {
-  composes: bigText;
-  grid-area: power;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif, 'Destiny Symbols';
   font-weight: 500;
   color: $power;
@@ -142,6 +143,19 @@
     vertical-align: 70%;
     font-size: 40%;
     margin-right: 2px;
+  }
+}
+
+.bigPowerLevel {
+  composes: bigText;
+  grid-area: power;
+}
+
+.smallPowerLevel {
+  text-align: right;
+
+  :global(.app-icon) {
+    font-size: 80%;
   }
 }
 
