--- a/src/app/item-feed/Highlights.m.scss
+++ b/src/app/item-feed/Highlights.m.scss
@@ -11,7 +11,18 @@
   flex-flow: column;
   margin: 4px 0;
 
-  > div > div {
+  > div {
+    margin-left: -3px;
+    margin-bottom: 3px;
+    padding-left: 4px;
+  }
+
+  .multiPerk {
+    border-left: 2px solid #888;
+    padding-left: 2px;
+  }
+
+  > div > div > div {
     display: flex;
     flex-flow: row;
     align-items: center;
