--- a/src/app/organizer/ItemTable.m.scss
+++ b/src/app/organizer/ItemTable.m.scss
@@ -182,7 +182,11 @@ $content-cells: 5;
 }
 
 .perks,
-.traits {
+.traits,
+.barrels,
+.intrinsics,
+.originTrait,
+.shaders {
   padding-top: calc(var(--item-size) * 0.5 * 0.5 - 5px) !important;
 }
 .perks {
