--- a/src/app/organizer/ItemTable.m.scss
+++ b/src/app/organizer/ItemTable.m.scss
@@ -15,7 +15,7 @@ $content-cells: 5;
 .table {
   min-width: 1270px;
   display: grid;
-  margin: 8px 0 16px 0 !important;
+  margin: 8px 0 16px 0;
 
   > div {
     padding: 4px 8px;
