--- a/src/app/organizer/ItemTypeSelector.m.scss
+++ b/src/app/organizer/ItemTypeSelector.m.scss
@@ -3,7 +3,7 @@
 .selector {
   background-color: rgba(0, 0, 0, 0);
   padding: 8px;
-  margin-top: 16px;
+  margin: 16px 8px 8px 8px;
   display: flex;
   flex-direction: column;
   align-items: center;
