Fix item type selector in place

--- a/src/app/organizer/Organizer.m.scss
+++ b/src/app/organizer/Organizer.m.scss
@@ -1,6 +1,8 @@
 @use '../variables.scss' as *;
 
 .organizer {
+  width: min-content;
+
   :global(.issue-banner-shown) & {
     padding-bottom: $issue-banner-height;
 
