--- a/src/app/organizer/ItemTypeSelector.m.scss
+++ b/src/app/organizer/ItemTypeSelector.m.scss
@@ -1,7 +1,10 @@
 @use '../variables' as *;
 
 .selector {
-  background-color: rgba(0, 0, 0, 0);
+  position: sticky;
+  box-sizing: border-box;
+  left: calc(8px + env(safe-area-inset-left));
+  width: calc(98vw - env(safe-area-inset-left) - env(safe-area-inset-right));
   padding: 8px;
   margin: 16px 8px 8px 8px;
   display: flex;
